--- a/contact.html
+++ b/contact.html
@@ -273,7 +273,7 @@
                         <input type="text" name="email" placeholder="Email" id="email">
                     </div>
                     <div class="form-group">
-                        <input type="tel" id="phone" name="phone" placeholder="phone">
+                        <input type="tel" id="phone" name="phone" placeholder="Phone">
                     </div>
                     <div class="form-group w-100">
                         <input type="text" name="subject" placeholder="Subject" id="subject">
@@ -295,14 +295,13 @@
                                 <img src="assets/images/contact/contact1.png" alt="contact">
                             </div>
                             <h4 class="title">Address</h4>
-                        </div>
-                        <div class="contact-content">
-                            <p>Office no 401, 4th floor, Atlanta Center,Sonewala Road, Goregaon East, Mumbai ,400063</p>
+                            <p>Aspire Career Mentors
+                                Crossroads Building, Fourth Floor, Office No - 406, Bhumkar Chowk-Wakad Pune - 411057</p>
                         </div>
                         <div class="contact-bg-icon">
                             <img src="assets/images/contact/contact1.png" alt="contact">
                         </div>
-                    </div>
+                  </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <div class="contact-item">
@@ -312,8 +311,8 @@
                             </div>
                             <h4 class="title">Email</h4>
                         </div>
-                        <div class="contact-content">
-                            <p class="pb-4">info@learningroutes.in</p>
+                        <div class="contact-content" style="padding-bottom: 50px;">
+                            <p>info@learningroutes.in</p>
                            
                         </div>
                         <div class="contact-bg-icon">
@@ -329,10 +328,9 @@
                             </div>
                             <h4 class="title">Phone</h4>
                         </div>
-                        <div class="contact-content">
+                        <div class="contact-content" style="padding-bottom: 20px;">
                            <p>+91-9711666200</p>
                             <p>+91-9870131040</p>
-                            </ul>
                         </div>
                         <div class="contact-bg-icon">
                             <img src="assets/images/contact/contact3.png" alt="contact">
@@ -358,115 +356,6 @@
         </div>
     </div>
     <!-- ==========Maps Section Ends Here========== -->
-
-
-    <!-- ==========Team Section Starts Here========== -->
-    <!-- <section class="team-section padding-top-2">
-        <div class="container">
-            <h4 class="title mb-30">Our Support Team</h4>
-            <div class="row justify-content-center mb-30-none">
-                <div class="col-lg-4 col-sm-6">
-                    <div class="team-item-2">
-                        <div class="team-thumb">
-                            <a href="#0"><img src="assets/images/team/team5.jpg" alt="team"></a>
-                            <ul class="team-social-two">
-                                <li>
-                                    <a href="#0"><i class="fab fa-facebook-f"></i></a>
-                                </li>
-                                <li>
-                                    <a href="#0"><i class="fab fa-linkedin-in"></i></a>
-                                </li>
-                                <li>
-                                    <a href="#0"><i class="fab fa-twitter"></i></a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="team-content">
-                            <div class="content">
-                                <h6 class="title"><a href="#0">Hera Rahman</a></h6>
-                                <span>Advisor</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <div class="team-item-2">
-                        <div class="team-thumb">
-                            <a href="#0"><img src="assets/images/team/team6.jpg" alt="team"></a>
-                            <ul class="team-social-two">
-                                <li>
-                                    <a href="#0"><i class="fab fa-facebook-f"></i></a>
-                                </li>
-                                <li>
-                                    <a href="#0"><i class="fab fa-linkedin-in"></i></a>
-                                </li>
-                                <li>
-                                    <a href="#0"><i class="fab fa-twitter"></i></a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="team-content">
-                            <div class="content">
-                                <h6 class="title"><a href="#0">Panna Rahman</a></h6>
-                                <span>Advisor</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <div class="team-item-2">
-                        <div class="team-thumb">
-                            <a href="#0"><img src="assets/images/team/team7.jpg" alt="team"></a>
-                            <ul class="team-social-two">
-                                <li>
-                                    <a href="#0"><i class="fab fa-facebook-f"></i></a>
-                                </li>
-                                <li>
-                                    <a href="#0"><i class="fab fa-linkedin-in"></i></a>
-                                </li>
-                                <li>
-                                    <a href="#0"><i class="fab fa-twitter"></i></a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="team-content">
-                            <div class="content">
-                                <h6 class="title"><a href="#0">Raihan Rahman</a></h6>
-                                <span>Advisor</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
-    <!-- ==========Team Section Ends Here========== -->
-
-
-    <!-- ==========Sponsor Section Starts Here========== -->
-    <!-- <div class="sponsor-section padding-bottom padding-top">
-        <div class="container">
-            <div class="sponsor-slider owl-theme owl-carousel">
-                <div class="sponsor-item">
-                    <img src="assets/images/sponsor/client1.png" alt="sponsor">
-                </div>
-                <div class="sponsor-item">
-                    <img src="assets/images/sponsor/client2.png" alt="sponsor">
-                </div>
-                <div class="sponsor-item">
-                    <img src="assets/images/sponsor/client3.png" alt="sponsor">
-                </div>
-                <div class="sponsor-item">
-                    <img src="assets/images/sponsor/client5.png" alt="sponsor">
-                </div>
-                <div class="sponsor-item">
-                    <img src="assets/images/sponsor/client6.png" alt="sponsor">
-                </div>
-            </div>
-        </div>
-    </div> -->
-    <!-- ==========Sponsor Section Ends Here========== -->
-
 
     <!-- ==========Footer Section Starts Here========== -->
     <footer>
@@ -520,10 +409,11 @@
                     <div class="footer-widget widget-about">
                         <div class="footer-logo">
                             <a href="index.html"><img src="assets/images/logo/footer-logo1.png" alt="logo"></a>
+                           <p>Aspire Career Mentors</p> 
                         </div>
-                        <p>As an Affiliate Enquiry Partner (AEP) of NMIMS Global Access School for Continuing Education
-                            (NGA-SCE), we display and showcase program information of NGA-SCE. NGA-SCE solely manages
-                            the Counselling, Admission, Program delivery and Examination.</p>
+                        <p>
+                        Crossroads Building, Fourth Floor, Office No - 406, Bhumkar Chowk-Wakad Pune - 411057</p>
+                          
                     </div>
                     <div class="footer-widget widget-link">
                         <h5 class="title">USEFUL LINKS</h5>
@@ -545,7 +435,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="footer-widget widget-link">
+                    <!-- <div class="footer-widget widget-link">
                         <h5 class="title">OUR OFFICES</h5>
                         <ul>
                             <li>
@@ -568,7 +458,7 @@
                             </li>
 
                         </ul>
-                    </div>
+                    </div> -->
                     <div class="footer-widget widget-link">
                         <h5 class="title">LATEST NEWS</h5>
                         <ul>
