--- a/Adani case.html
+++ b/Adani case.html
@@ -500,49 +500,49 @@
                     <div class="widget widget-tags">
                         <ul>
                             <li class="active">
-                                <a href="#0">ADANI HINDENBURG CASE</a>
+                                <a href="Adani case.html">ADANI HINDENBURG CASE</a>
                             </li>
                             <li>
-                                <a href="#0">ARTIFICIAL INTELLIGENCE</a>
+                                <a href="ARTIFICIAL INTELLIGENCE.html">ARTIFICIAL INTELLIGENCE</a>
                             </li>
                             <li>
-                                <a href="#0">BUDGET 2023</a>
+                                <a href="BUDGET 2023 .html">BUDGET 2023</a>
                             </li>
                             <li>
-                                <a href="#0">BUSINESS</a>
+                                <a href="BUSINESS .html">BUSINESS</a>
                             </li>
                             <li>
-                                <a href="#0">CAREER & JOBS</a>
+                                <a href="CAREER & JOBS .html">CAREER & JOBS</a>
                             </li>
                             <li>
-                                <a href="#0">CASE STUDY</a>
+                                <a href="CASE STUDY .html">CASE STUDY</a>
                             </li>
                             <li>
-                                <a href="#0">CHATGPT</a>
+                                <a href="CHATGPT .html">CHATGPT</a>
                             </li>
                             <li>
-                                <a href="#0">DATA ANALYTICS</a>
+                                <a href="DATA ANALYTICS .html">DATA ANALYTICS</a>
                             </li>
                             <li>
-                                <a href="#0">DIGITAL MARKETING</a>
+                                <a href="DIGITAL MARKETING .html">DIGITAL MARKETING</a>
                             </li>
                             <li>
-                                <a href="#0">DIPLOMA</a>
+                                <a href="DIPLOMA .html">DIPLOMA</a>
                             </li>
                             <li>
-                                <a href="#0">DISTANCE B.COM</a>
+                                <a href="distance b-com.html">DISTANCE B.COM</a>
                             </li>
                             <li>
-                                <a href="#0">DISTANCE BBA</a>
+                                <a href="DISTANCE BBA .html">DISTANCE BBA</a>
                             </li>
                             <li>
-                                <a href="#0">DISTANCE LEARNING</a>
+                                <a href="DISTANCE LEARNING .html">DISTANCE LEARNING</a>
                             </li>
                             <li>
-                                <a href="#0">DISTANCE MBA</a>
+                                <a href="">DISTANCE MBA</a>
                             </li>
                             <li>
-                                <a href="#0">DISTANCE MBA IN INDIA</a>
+                                <a href="">DISTANCE MBA IN INDIA</a>
                             </li>
                             <li>
                                 <a href="#0">DISTANCE MBA VS REGULAR MBA</a>
@@ -560,16 +560,16 @@
                                 <a href="#0">EXECUTIVE MBA</a>
                             </li>
                             <li>
-                                <a href="#0">HIGHER EDUCATION</a>
+                                <a href="HIGHER EDUCATION.html">HIGHER EDUCATION</a>
                             </li>
                             <li>
-                                <a href="#0">INDIAN STARTUPS</a>
+                                <a href="">INDIAN STARTUPS</a>
                             </li>
                             <li>
-                                <a href="#0">JOBS</a>
+                                <a href="">JOBS</a>
                             </li>
                              <li>
-                                <a href="#0">MAH CET 2021</a>
+                                <a href="MAH CET 2021.html">MAH CET 2021</a>
                             </li>
                              <li>
                                 <a href="#0">MBA</a>
@@ -584,16 +584,16 @@
                                 <a href="#0">NMIMS EXAM</a>
                             </li>
                             <li>
-                                <a href="#0">ODL MBA IN INDIA</a>
+                                <a href="ODL MBA IN INDIA.html">ODL MBA IN INDIA</a>
                             </li>
                             <li>
-                                <a href="#0">OPEN AND DISTANCE LEARNING</a>
+                                <a href="OPEN AND DISTANCE LEARNING.html">OPEN AND DISTANCE LEARNING</a>
                             </li>
                              <li>
-                                <a href="#0">RESUME</a>
+                                <a href="resume.html">RESUME</a>
                             </li>
                             <li>
-                                <a href="#0">TECHNOLOGY</a>
+                                <a href="Techonology.html">TECHNOLOGY</a>
                             </li>
                             <li>
                                 <a href="#0">TRENDING TOPIC</a>
