--- a/CHATGPT .html
+++ b/CHATGPT .html
@@ -456,7 +456,7 @@
                             </div>
                         </div>
                     </div>
-                    <h6>Tag:AI, Bard by Google, ChatGPT, Open AI, Power of AI</h6>
+                    <!-- <h6>Tag:AI, Bard by Google, ChatGPT, Open AI, Power of AI</h6> -->
                     <ul class="blog-pagination">
                         <li>
                             <a href="#0"><i class="fas fa-angle-left"></i></a>
