--- a/DIGITAL MARKETING .html
+++ b/DIGITAL MARKETING .html
@@ -304,7 +304,7 @@
                             </div>
                         </div>
                     </div>
-                    <h6>Tag:Advertising, Digital Marketing Courses, Google Marketing, Internet Marketing, Online Marketing</h6>
+                    <!-- <h6>Tag:Advertising, Digital Marketing Courses, Google Marketing, Internet Marketing, Online Marketing</h6> -->
                     <ul class="blog-pagination">
                         <li>
                             <a href="#0"><i class="fas fa-angle-left"></i></a>
