--- a/DIPLOMA .html
+++ b/DIPLOMA .html
@@ -507,7 +507,7 @@
                             </div>
                         </div>
                     </div>
-                    <h6>Tag:Diploma Courses, NMIMS Diploma, Online Diploma</h6>
+                    <!-- <h6>Tag:Diploma Courses, NMIMS Diploma, Online Diploma</h6> -->
                     <ul class="blog-pagination">
                         <li>
                             <a href="#0"><i class="fas fa-angle-left"></i></a>
