--- a/DISTANCE MBA VS REGULAR MBA .html
+++ b/DISTANCE MBA VS REGULAR MBA .html
@@ -445,7 +445,7 @@
                             </div>
                         </div>
                     </div>
-                    <h6>Tag:Distance Learning, Distance MBA, Distance Vs Regular MBA, Regular MBA
+                    <!-- <h6>Tag:Distance Learning, Distance MBA, Distance Vs Regular MBA, Regular MBA -->
                     <ul class="blog-pagination">
                         <li>
                             <a href="#0"><i class="fas fa-angle-left"></i></a>
