--- a/Jobs-1.html
+++ b/Jobs-1.html
@@ -353,19 +353,19 @@
 
                     <ul class="blog-pagination">
                         <li>
-                            <a href="#0"><i class="fas fa-angle-left"></i></a>
+                            <a href="blog.html"><i class="fas fa-angle-left"></i></a>
                         </li>
                         <li>
-                            <a href="#0">03</a>
+                            <a class="active" href="Jobs-1.html">01</a>
                         </li>
                         <li>
-                            <a href="#0">04</a>
+                            <a href="Jobs-2.html">02</a>
                         </li>
                         <li>
-                            <a href="#0">05</a>
+                            <a href="Jobs-3.html">03</a>
                         </li>
                         <li>
-                            <a href="#0" class="active"><i class="fas fa-angle-right"></i></a>
+                            <a href="Jobs-4.html">04</a>
                         </li>
                     </ul>
                 </div>
@@ -378,7 +378,7 @@
                     </div>
                     <div class="widget widget-tags">
                         <ul>
-                            <li class="active">
+                            <li>
                                 <a href="#0">ADANI HINDENBURG CASE</a>
                             </li>
                             <li>
@@ -444,8 +444,8 @@
                             <li>
                                 <a href="#0">INDIAN STARTUPS</a>
                             </li>
-                            <li>
-                                <a href="#0">JOBS</a>
+                            <li class="active">
+                                <a href="Jobs-1.html">JOBS</a>
                             </li>
                              <li>
                                 <a href="#0">MAH CET 2021</a>
