--- a/NGASCE-2.html
+++ b/NGASCE-2.html
@@ -384,19 +384,19 @@
 
                     <ul class="blog-pagination">
                         <li>
-                            <a href="#0"><i class="fas fa-angle-left"></i></a>
+                            <a href="blog.html"><i class="fas fa-angle-left"></i></a>
                         </li>
                         <li>
-                            <a href="#0">03</a>
+                            <a  href="NGASCE-1.html">01</a>
                         </li>
                         <li>
-                            <a href="#0">04</a>
+                            <a class="active" href="NGASCE-2.html">02</a>
                         </li>
                         <li>
-                            <a href="#0">05</a>
+                            <a href="NGASCE-3.html">03</a>
                         </li>
                         <li>
-                            <a href="#0" class="active"><i class="fas fa-angle-right"></i></a>
+                            <a href="NGASCE-4.html">04</a>
                         </li>
                     </ul>
                 </div>
@@ -409,7 +409,7 @@
                     </div>
                     <div class="widget widget-tags">
                         <ul>
-                            <li class="active">
+                            <li>
                                 <a href="#0">ADANI HINDENBURG CASE</a>
                             </li>
                             <li>
@@ -484,8 +484,8 @@
                              <li>
                                 <a href="#0">MBA</a>
                             </li>
-                             <li>
-                                <a href="#0">NGASCE</a>
+                             <li class="active">
+                                <a href="NGASCE-2.html">NGASCE</a>
                             </li>
                              <li>
                                 <a href="#0">NMIMS</a>
