--- a/blog.html
+++ b/blog.html
@@ -549,7 +549,7 @@
                                 <a href="#0">INDIAN STARTUPS</a>
                             </li>
                             <li>
-                                <a href="#0">JOBS</a>
+                                <a href="Jobs-1.html">JOBS</a>
                             </li>
                              <li>
                                 <a href="#0">MAH CET 2021</a>
@@ -558,7 +558,7 @@
                                 <a href="#0">MBA</a>
                             </li>
                              <li>
-                                <a href="NGASCE-26 October.html">NGASCE</a>
+                                <a href="NGASCE-1.html">NGASCE</a>
                             </li>
                              <li>
                                 <a href="NMIMS-30th Sept.html">NMIMS</a>
