--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-<!-- Mirrored from template.viserlab.com/bosto/demo/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 06 Apr 2023 13:15:46 GMT -->
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Bosto - Business Consulting HTML Template</title>
+    <title>Learnig | Home </title>
 
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/all.min.css">
@@ -39,14 +36,25 @@
         <div class="header-top">
             <div class="container">
                 <div class="header-top-wrapper">
-                    <span>Success your Business</span>
-                    <select class="select-bar">
-                        <option value="en">English</option>
-                        <option value="bn">Brazil</option>
-                        <option value="pk">Romania</option>
-                        <option value="in">Sweden</option>
-                        <option value="in">India</option>
-                    </select>
+                    <span><i aria-hidden="true" class="far fa-clock"></i> Working Hours : 10 AM to 7 PM</span>
+                    
+                   
+                    <div class="info-item">
+                        <ul class="header-social">
+                            <li>
+                                <a href="#0"><i class="fab fa-facebook-f"></i></a>
+                            </li>
+                            <li>
+                                <a href="#0"><i class="fab fa-twitter"></i></a>
+                            </li>
+                            <li>
+                                <a href="#0"><i class="fab fa-linkedin-in"></i></a>
+                            </li>
+                            <li>
+                                <a href="#0"><i class="fab fa-google-plus-g"></i></a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -105,13 +113,19 @@
                         </li>
 
                         <li>
-                            <a href="#0">NMIMS-NGASCE</a>
+                            <a href="#0">Our Courses</a>
                             <ul class="submenu">
                                 <li>
-                                    <a href="about.html">NMIMS Global Student Zone</a>
+                                    <a href="Distance MBA.html">Distance MBA</a>
                                 </li>
                                 <li>
-                                    <a href="faq.html">NMIMS Exams Faq</a>
+                                    <a href="batchlor courses.html">Batchlor Courses</a>
+                                </li>
+                                <li>
+                                    <a href="distance-diploma.html">Distance Diploma</a>
+                                </li>
+                                <li>
+                                    <a href="certificate-courses.html">Certificate Courses</a>
                                 </li>
                             </ul>
                         </li>
