--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
                         <a href="blog.html">Blog</a>
                     </li>
                     <li>
+                        <a href="aboutUs.html">AboutUs</a>
+                    </li>
+                    <li>
                         <a href="contact.html">Contact</a>
                     </li>
                 </ul>
