--- a/index.html
+++ b/index.html
@@ -35,8 +35,6 @@
             <div class="container">
                 <div class="header-top-wrapper">
                     <span><i aria-hidden="true" class="far fa-clock"></i> Working Hours : 10 AM to 7 PM</span>
-
-
                     <div class="info-item">
                         <ul class="header-social">
                             <li>
@@ -62,9 +60,7 @@
         </div>
         <div class="header-middle">
             <div class="header-area">
-                <!-- <div class="logo">
-                        <a href="index.html"><img src="assets/images/logo/footer-logo2.png" alt="logo"></a>
-                    </div> -->
+
                 <ul class="menu">
                     <li> <a href="index.html"><img src="assets/images/logo/footer-logo2.png" alt="logo"></a></li>
                     <li>
@@ -124,19 +120,24 @@
 
 
     <!-- ==========Feature Section Starts Here========== -->
-    <section class="banner-slider owl-theme owl-carousel">
-        <div class="banner-slider-item banner-overlay bg_img" data-background="assets/images/banner/banner1.jpg">
+    <section>
+        <div class="banner-slider-item banner-overlay bg_img" data-background="assets/images/banner/banner-img.png">
             <div class="container">
-                <div class="banner-content">
-                    <h1 class="title">Grow Your Business With US</h1>
-                    <div class="banner-buttons">
-                        <a href="#0" class="custom-button">about us</a>
-                        <a href="#0" class="custom-button white">contact us</a>
+                <div class="row">
+                    <div class="col-lg-5">  
+                        <div class="banner-content">
+                            <p class="title">Upgrade your skills and knowledge with our distance courses</p>
+                            <!-- <div class="banner-buttons">
+                                <a href="#0" class="custom-button">about us</a>
+                                <a href="#0" class="custom-button white">contact us</a>
+                            </div> -->
+                        </div>
                     </div>
                 </div>
+                
             </div>
         </div>
-        <div class="banner-slider-item banner-overlay bg_img" data-background="assets/images/banner/banner2.jpg">
+        <!-- <div class="banner-slider-item banner-overlay bg_img" data-background="assets/images/banner/banner2.jpg">
             <div class="container">
                 <div class="banner-content">
                     <h1 class="title">Hire Us for best advices to succeed</h1>
@@ -157,7 +158,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </section>
     <!-- ==========Feature Section Ends Here========== -->
     <section class="project-section padding-top" style="margin-top: 40px;">
