--- a/index.html
+++ b/index.html
@@ -72,16 +72,16 @@
                         <a href="#0">Our Courses</a>
                         <ul class="submenu">
                             <li>
-                                <a href="#">Distance MBA</a>
+                                <a href="Distance MBA.html">Distance MBA</a>
                             </li>
                             <li>
-                                <a href="#">Bachelor Courses</a>
+                                <a href="batchlor courses.html">Bachelor Courses</a>
                             </li>
                             <li>
-                                <a href="#">Diploma Courses</a>
+                                <a href="DIPLOMA .html">Diploma Courses</a>
                             </li>
                             <li>
-                                <a href="#">Certification Courses</a>
+                                <a href="certificate-courses.html">Certification Courses</a>
                             </li>
                         </ul>
                     </li>
@@ -728,16 +728,16 @@
                         <h5 class="title">Courses</h5>
                         <ul>
                             <li>
-                                <a href="#">Distance MBA</a>
+                                <a href="Distance MBA.html">Distance MBA</a>
                             </li>
                             <li>
-                                <a href="#">Bachelor Courses</a>
+                                <a href="batchlor courses.html">Bachelor Courses</a>
                             </li>
                             <li>
-                                <a href="#">Diploma Courses</a>
+                                <a href="DIPLOMA .html">Diploma Courses</a>
                             </li>
                             <li>
-                                <a href="#">Certification Courses</a>
+                                <a href="certificate-courses.html">Certification Courses</a>
                             </li>
                         </ul>
                     </div>
