--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Learnig | Home </title>
+    <title>Learning | Home </title>
 
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/all.min.css">
@@ -78,7 +78,7 @@
                                 <a href="batchlor courses.html">Bachelor Courses</a>
                             </li>
                             <li>
-                                <a href="DIPLOMA .html">Diploma Courses</a>
+                                <a href="distance-diploma.html">Diploma Courses</a>
                             </li>
                             <li>
                                 <a href="certificate-courses.html">Certification Courses</a>
@@ -89,7 +89,7 @@
                         <a href="blog.html">Blog</a>
                     </li>
                     <li>
-                        <a href="aboutUs.html">AboutUs</a>
+                        <a href="aboutUs.html">About Us</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
