--- a/Top 10 MBA Job Opportunities to Explore.html
+++ b/Top 10 MBA Job Opportunities to Explore.html
@@ -53,113 +53,79 @@
         <div class="header-top">
             <div class="container">
                 <div class="header-top-wrapper">
-                    <span>Success your Business</span>
-                    <select class="select-bar">
-                        <option value="en">English</option>
-                        <option value="bn">Brazil</option>
-                        <option value="pk">Romania</option>
-                        <option value="in">Sweden</option>
-                        <option value="in">India</option>
-                    </select>
+                    <span><i aria-hidden="true" class="far fa-clock"></i> Working Hours : 10 AM to 7 PM</span>
+                    <div class="info-item">
+                        <ul class="header-social">
+                            <li>
+                                <a href="#0"><i class="fab fa-facebook-f"></i></a>
+                            </li>
+                            <li>
+                                <a href="#0"> <i class="fab fa-instagram"></i> </a>
+                            </li>
+                            <li>
+                                <a href="#0"><i class="fab fa-twitter"></i></a>
+                            </li>
+                            <li>
+                                <a href="#0"><i class="fab fa-youtube"></i></a>
+                            </li>
+                            <li>
+                                <a href="#0"><i class="fab fa-linkedin-in"></i></a>
+                            </li>
+
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="header-middle">
-            <div class="container">
-                <div class="header-wrapper">
-                    <div class="logo d-none d-lg-block">
-                        <a href="#0"><img src="assets/images/logo/logo.png" alt="logo"></a>
-                    </div>
-                    <div class="info-area">
-                        <div class="info-item">
-                            <div class="info-thumb">
-                                <i class="flaticon-email"></i>
-                            </div>
-                            <div class="info-content">
-                                <h6 class="title">Email Address</h6>
-                                <a href="Mailto:companyemail@gmail.com"><span class="__cf_email__" data-cfemail="ff9c90928f9e91869a929e9693bf98929e9693d19c9092">[email&#160;protected]</span></a>
-                            </div>
-                        </div>
-                        <div class="info-item">
-                            <div class="info-thumb">
-                                <i class="flaticon-map"></i>
-                            </div>
-                            <div class="info-content">
-                                <h6 class="title">Office Address</h6>
-                                <span>1209 Elephent Road, Uttara</span>
-                            </div>
-                        </div>
-                        <div class="info-item">
-                            <ul class="header-social">
-                                <li>
-                                    <a href="#0"><i class="fab fa-facebook-f"></i></a>
-                                </li>
-                                <li>
-                                    <a href="#0"><i class="fab fa-twitter"></i></a>
-                                </li>
-                                <li>
-                                    <a href="#0"><i class="fab fa-linkedin-in"></i></a>
-                                </li>
-                                <li>
-                                    <a href="#0"><i class="fab fa-google-plus-g"></i></a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
+            <div class="header-area">
+
+                <ul class="menu">
+                    <li> <a href="index.html"><img src="assets/images/logo/footer-logo2.png" alt="logo"></a></li>
+                    <li>
+                        <a href="index.html">Home</a>
+
+                    </li>
+
+                    <li>
+                        <a href="#0">Our Courses</a>
+                        <ul class="submenu">
+                            <li>
+                                <a href="Distance MBA.html">Distance MBA</a>
+                            </li>
+                            <li>
+                                <a href="batchlor courses.html">Bachelor Courses</a>
+                            </li>
+                            <li>
+                                <a href="DIPLOMA .html">Diploma Courses</a>
+                            </li>
+                            <li>
+                                <a href="certificate-courses.html">Certification Courses</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="blog.html">Blog</a>
+                    </li>
+                    <li>
+                        <a href="aboutUs.html">About Us</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
+                </ul>
+                <div class="header-bar2 ml-auto d-lg-none">
+                    <i class="fas fa-ellipsis-h"></i>
                 </div>
-                <div class="header-area style-2">
-                    <div class="logo d-lg-none">
-                        <a href="#0"><img src="assets/images/logo/footer-logo2.png" alt="logo"></a>
-                    </div>
-                    <ul class="menu">
-                        <li>
-                            <a href="index.html">Home</a>
-                            <!-- <ul class="submenu">
-                                <li>
-                                    <a href="index.html">Home One</a>
-                                </li>
-                                <li>
-                                    <a href="index-2.html">Home Two</a>
-                                </li>
-                            </ul> -->
-                        </li>
-                        <!-- <li>
-                            <a href="about.html">About</a>
-                        </li> -->
-                        <li>
-                            <a href="#0">NMIMS-NGASCE</a>
-                            <ul class="submenu">
-                                <li>
-                                    <a href="about.html">NMIMS Global Student Zone</a>
-                                </li>
-                                <li>
-                                    <a href="faq.html">NMIMS Exams Faq</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="blog.html">Blog</a>
-                        </li>
-                        <li>
-                            <a href="contact.html">Contact Us</a>
-                        </li>
-                        <li class="ml-auto">
-                            <a href="#0" class="search-bar"><i class="fas fa-search"></i></a>
-                        </li>
-                    </ul>
-                    <div class="header-bar2 ml-auto d-lg-none">
-                        <i class="fas fa-ellipsis-h"></i>
-                    </div>
-                    <div class="header-bar d-lg-none">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </div>
+                <div class="header-bar d-lg-none">
+                    <span></span>
+                    <span></span>
+                    <span></span>
                 </div>
             </div>
         </div>
     </header>
-    
+
     <div class="search-form-area">
         <span class="hide-form">
             <i class="fas fa-times"></i>
@@ -540,7 +506,7 @@
 
 
     <!-- ==========Footer Section Starts Here========== -->
-    <footer class="dark-footer">
+    <footer>
         <div class="container">
             <div class="footer-top">
                 <div class="footer-wrapper">
@@ -548,94 +514,86 @@
                         <div class="footer-logo">
                             <a href="index.html"><img src="assets/images/logo/footer-logo2.png" alt="logo"></a>
                         </div>
-                        <p>Senectus nunc volutpat sed at fusce, varius nulla orci luctus, ac ultricies ipsum aliquam bibendum felis, platea erat sit. Est dolor</p>
-                        <div class="footer-contact">
-                            <a href="Tel:0123654789" class="call">2222 - 3333 - 666 3333 - 666</a>
-                            <a href="Mailto:demo@gmai.com" class="mail"><span class="__cf_email__" data-cfemail="6e0a0b03012e09030f07400d0103">[email&#160;protected]</span></a>
-                        </div>
+                        <p>We offer a broad range of management courses and programs to the management aspirants who
+                            cannot go for a regular course or are working professionals.</p>
                     </div>
                     <div class="footer-widget widget-link">
-                        <h5 class="title">Our Quick Link</h5>
+                        <h5 class="title">Courses</h5>
                         <ul>
                             <li>
-                                <a href="#0">Professional Team</a>
+                                <a href="Distance MBA.html">Distance MBA</a>
                             </li>
                             <li>
-                                <a href="#0">Support</a>
+                                <a href="batchlor courses.html">Bachelor Courses</a>
                             </li>
                             <li>
-                                <a href="#0">Pricing</a>
+                                <a href="distance-diploma.html">Diploma Courses</a>
                             </li>
                             <li>
-                                <a href="#0">Privacy Policy</a>
-                            </li>
-                            <li>
-                                <a href="#0">Services</a>
+                                <a href="certificate-courses.html">Certification Courses</a>
                             </li>
                         </ul>
                     </div>
+
                     <div class="footer-widget widget-link">
-                        <h5 class="title">Company</h5>
+                        <h5 class="title">Get In Touch</h5>
                         <ul>
                             <li>
-                                <a href="#0">Web Design</a>
+                                <i aria-hidden="true" class="fas fa-map-marker-alt"></i> </span>
+                                <span class="elementor-icon-list-text">Bhumkar Chowk</span>
                             </li>
-                            <li>
-                                <a href="#0">Our History</a>
+
+                            <li class="elementor-icon-list-item">
+                                <span class="elementor-icon-list-icon">
+                                    <i aria-hidden="true" class="fas fa-envelope"></i> </span>
+                                <span class="elementor-icon-list-text">infocus@gmail.com</span>
                             </li>
-                            <li>
-                                <a href="#0">Our Services</a>
+
+                            <li class="elementor-icon-list-item">
+                                <span class="elementor-icon-list-icon">
+                                    <i aria-hidden="true" class="fas fa-phone"></i> </span>
+                                <span class="elementor-icon-list-text">+91-9999999999 </span>
                             </li>
-                            <li>
-                                <a href="#0">Become A Member</a>
-                            </li>
-                            <li>
-                                <a href="#0">Appointment</a>
-                            </li>
-                            <li>
-                                <a href="#0">Our Support Team</a>
-                            </li>
+
                         </ul>
                     </div>
-                    <div class="footer-widget widget-link">
-                        <h5 class="title">My Account</h5>
-                        <ul>
-                            <li>
-                                <a href="#0">About Us</a>
+                    <div class="info-item footer-widget widget-link">
+                        <h5 class="title">Follow Us</h5>
+                        <ul class="header-social">
+                            <li class="pr-3">
+                                <a href="#0"><i class="fab fa-facebook-f"></i></a>
                             </li>
-                            <li>
-                                <a href="#0">My Account</a>
+                            <li class="pr-3">
+                                <a href="#0"> <i class="fab fa-instagram"></i> </a>
                             </li>
-                            <li>
-                                <a href="#0">Privacy Policy</a>
+                            <li class="pr-2">
+                                <a href="#0"><i class="fab fa-twitter"></i></a>
                             </li>
-                            <li>
-                                <a href="#0">Sign In </a>
+
+                            <li class="pr-3 pt-2">
+                                <a href="#0"><i class="fab fa-youtube"></i></a>
                             </li>
-                            <li>
-                                <a href="#0">Information</a>
+                            <li class="pt-2">
+                                <a href="#0"><i class="fab fa-linkedin-in"></i></a>
                             </li>
+
                         </ul>
+
+
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
                 <div class="footer-bottom-wrapper">
                     <div class="item">
-                        <p class="m-0">Copyright © 2020. All rights reserved</p>
+                        <p class="m-0">© 2023.INFOCUS INFOTECH PVT. LTD. All rights reserved.</p>
                     </div>
                     <ul class="item">
                         <li>
-                            <a href="#0">Home</a>
+                            <a href="#0">Terms Of Use </a>
                         </li>
                         <li>
-                            <a href="#0">About Us</a>
-                        </li>
-                        <li>
-                            <a href="#0">News</a>
-                        </li>
-                        <li>
-                            <a href="#0">Contact Us</a>
+                            <a href="#0">Privacy Policy</a>
                         </li>
                     </ul>
                 </div>
