--- a/contact.html
+++ b/contact.html
@@ -134,10 +134,7 @@
                         <a href="index.html">home</a>
                     </li>
                     <li>
-                        <a href="contact.html"> contact</a>  
-                    </li>
-                    <li>
-                       Mumbai
+                        contact
                     </li>
                 </ul>
             </div>
@@ -199,7 +196,7 @@
                             <h4 class="title">Email</h4>
                         </div>
                         <div class="contact-content" style="padding-bottom: 50px;">
-                            <p>info@learningroutes.in</p>
+                            <p>infocus@gmail.com</p>
                            
                         </div>
                         <div class="contact-bg-icon">
@@ -216,8 +213,8 @@
                             <h4 class="title">Phone</h4>
                         </div>
                         <div class="contact-content" style="padding-bottom: 20px;">
-                           <p>+91-9711666200</p>
-                            <p>+91-9870131040</p>
+                           <p>+91-9999999999</p>
+                            <p>+91-9999999999</p>
                         </div>
                         <div class="contact-bg-icon">
                             <img src="assets/images/contact/contact3.png" alt="contact">
@@ -238,8 +235,7 @@
             </div>
     <div class="map-section">
         <div class="container mb-5">
-           
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3791449.2692242768!2d71.38406133606333!3d21.873453758843663!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b7ebfaaaeebb%3A0xd7feaafe3c9b8aad!2sLearning%20Routes%20Private%20Limited!5e0!3m2!1sen!2sin!4v1623214348605!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3781.3001891372783!2d73.75018017422279!3d18.60556298250457!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2b9407e30875d%3A0xd3df7c9e0eb2dd7!2sInfocus%20Infotech%20Pvt%20Ltd!5e0!3m2!1sen!2sin!4v1682501429774!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
     <!-- ==========Maps Section Ends Here========== -->
