--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,21 @@
     <link rel="stylesheet" href="assets/css/main.css">
 
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
+
+    <style>
+        .page-header .container {
+            height:100px;
+        }
+
+        .page-header::before {
+           background: none;
+        }
+
+        .contact-wrapper {
+            background: #181818;
+            margin-top: 70px;
+        }
+    </style>
 </head>
 
 <body>
@@ -125,18 +140,18 @@
     <!-- ==========Header Section Ends Here========== -->
     
     <!-- ==========Page Header Section Starts Here========== -->
-    <section class="page-header bg_img" data-background="assets/images/about/page-header.jpg">
+    <section class="page-header bg_img" data-background="assets/images/contact/page_header.png">
         <div class="container">
             <div class="page-header-content">
-                <h2 class="title">Contact Us</h2>
-                <ul class="breadcrumb">
+                <!-- <h2 class="title">Contact Us</h2> -->
+                <!-- <ul class="breadcrumb">
                     <li>
                         <a href="index.html">home</a>
                     </li>
                     <li>
                         contact
                     </li>
-                </ul>
+                </ul> -->
             </div>
         </div>
     </section>
