--- a/blog.html
+++ b/blog.html
@@ -281,8 +281,8 @@
                     <div class="widget widget-tags">
                         <h5>Archives</h5>
                         <ul>
-                            <li id="Archive">
-                                <a href="#0">April 2023</a>
+                            <li id="Archives">
+                                <a href="blog.html">April 2023</a>
                             </li>
                         </ul>
                         <!-- <ul>
