--- a/Top 10 MBA Job Opportunities to Explore.html
+++ b/Top 10 MBA Job Opportunities to Explore.html
@@ -339,7 +339,7 @@
                         <h5>Archives</h5>
                         <ul>
                             <li id="Archive">
-                                <a href="#0">April 2023</a>
+                                <a href="blog.html">April 2023</a>
                             </li>
                         </ul>
                         <!-- <ul>
