--- a/index.html
+++ b/index.html
@@ -610,8 +610,8 @@
 
 
     <!-- ==========Faq Section Starts Here========== -->
-    <section class="faq-section padding-top client-section padding-bottom padding-top mt-4 wow fadeInUp">
-        <div class="container section-bg" style="border: 1px solid #ebebeb;
+    <section class="faq-section padding-top client-section padding-bottom padding-top mt-4 wow fadeInUp" style="margin-bottom: 40px;">
+        <div class="container section-bg" style="margin-top:80px ;border: 1px solid #ebebeb; margin-bottom: 80px;
     box-shadow: 5px 10px 14px #888888;">
             <div class="section-header pt-4">
                 <h4 class="title">Lets Clear Some Doubts</h4>
