added terms of use

--- a/Distance MBA.html
+++ b/Distance MBA.html
@@ -881,7 +881,7 @@ table, th, td {
                     </div>
                     <ul class="item">
                         <li>
-                            <a href="#0">Terms Of Use </a>
+                            <a href="terms-condition.html">Terms Of Use </a>
                         </li>
                         <li>
                             <a href="#0">Privacy Policy</a>
