--- a/batchlor courses.html
+++ b/batchlor courses.html
@@ -369,7 +369,7 @@
                     </div>
                     <ul class="item">
                         <li>
-                            <a href="#0">Terms Of Use </a>
+                            <a href="terms-condition.html">Terms Of Use </a>
                         </li>
                         <li>
                             <a href="#0">Privacy Policy</a>
