--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
                         </div>
                         <div class="col-md-3 col-lg-6">
                             <div class="justify-content-end slider-nav">
-                                <a href="about.html" class="custom-button2">View All Stories</a>
+                                <a href="aboutUs.html" class="custom-button2">View All Stories</a>
                             </div>
                         </div>
                     </div>
@@ -797,7 +797,7 @@
                     </div>
                     <ul class="item">
                         <li>
-                            <a href="#0">Terms Of Use </a>
+                            <a href="terms-condition.html">Terms Of Use </a>
                         </li>
                         <li>
                             <a href="#0">Privacy Policy</a>
