--- a/terms-condition.html
+++ b/terms-condition.html
@@ -24,6 +24,13 @@
     .item {
         text-align: justify;
     }
+    .page-header .container {
+            height:200px;
+        }
+
+        .page-header::before {
+           background: none;
+        }
 </style>
 <body>
 
@@ -124,7 +131,7 @@
     <!-- ==========Header Section Ends Here========== -->
     
     <!-- ==========Page Header Section Starts Here========== -->
-    <section class="page-header bg_img" data-background="assets/images/about/page-header.jpg">
+    <section class="page-header bg_img" data-background="assets/images/counter/new-banner.png">
         <div class="container">
             <div class="page-header-content">
                 <h2 class="title">Terms Of Use </h2>
