added privacy page

--- a/distance-diploma.html
+++ b/distance-diploma.html
@@ -352,7 +352,7 @@
                             <a href="#0">Terms Of Use </a>
                         </li>
                         <li>
-                            <a href="#0">Privacy Policy</a>
+                            <a href="privacy-policy.html">Privacy Policy</a>
                         </li>
                     </ul>
                 </div>
