--- a/Distance MBA.html
+++ b/Distance MBA.html
@@ -884,7 +884,7 @@ table, th, td {
                             <a href="#0">Terms Of Use </a>
                         </li>
                         <li>
-                            <a href="#0">Privacy Policy</a>
+                            <a href="privacy-policy.html">Privacy Policy</a>
                         </li>
                     </ul>
                 </div>
