--- a/terms-condition.html
+++ b/terms-condition.html
@@ -135,14 +135,6 @@
         <div class="container">
             <div class="page-header-content">
                 <h2 class="title">Terms Of Use </h2>
-                <ul class="breadcrumb">
-                    <li>
-                        <a href="index.html">Home</a>
-                    </li>
-                    <li>
-                        Terms Of Use 
-                    </li>
-                </ul>
             </div>
         </div>
     </section>
@@ -342,7 +334,7 @@
                             <a href="terms-condition.html">Terms Of Use </a>
                         </li>
                         <li>
-                            <a href="#0">Privacy Policy</a>
+                            <a href="privacy-policy.html">Privacy Policy</a>
                         </li>
                     </ul>
                 </div>
