--- a/aboutUs.html
+++ b/aboutUs.html
@@ -115,7 +115,7 @@
         .video_info::before {
             content: "";
             position: absolute;
-            background: url('assets/images/about/choose-bg.jpg') no-repeat center center/cover;
+            background: url('assets/images/about/Video_Info.png') no-repeat center center/cover;
             height: 400px;
             width: 100%;
             z-index: -1;
