--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="assets/css/main.css">
 
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
-    <style>
+    <!-- <style>
         #Archive{
             border: 1px solid rgb(255, 154, 154);
             background-color: white;
@@ -40,7 +40,7 @@
            background: none;
         }
 
-    </style>
+    </style> -->
 </head>
 
 <body>
