--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
 
-    <style>
+    <!-- <style>
         .page-header .container {
             height:200px;
         }
@@ -33,7 +33,7 @@
             background: #181818;
             margin-top: 70px;
         }
-    </style>
+    </style> -->
 </head>
 
 <body>
