--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -160,7 +160,7 @@
                     <div class="item">
                         <h4 class="title">Who we are</h4>
                         <p>Suggested text: Our website address is: https://www.learningroutes.in.</p>
-                       <h5>We are an authorised enrolment partner of NMIMS Global Access School For Continuing Education (NGA-SCE)</h5>
+                       <p style="font-weight: bold;">We are an authorised enrolment partner of NMIMS Global Access School For Continuing Education (NGA-SCE)</p>
                     </div>
                     <div class="item">
                         <h4 class="title">Comments</h4>
