--- a/aboutUs.html
+++ b/aboutUs.html
@@ -227,7 +227,7 @@
                 <div class="header-bar2 ml-auto d-lg-none">
                     <i class="fas fa-ellipsis-h"></i>
                 </div>
-                <div class="header-bar d-lg-none">
+                <div class="header-bar mr-3 d-lg-none">
                     <span></span>
                     <span></span>
                     <span></span>
