--- a/blog.html
+++ b/blog.html
@@ -19,8 +19,8 @@
     <link rel="stylesheet" href="assets/css/main.css">
 
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
-    <!-- <style>
-        #Archive{
+    <style>
+        /* #Archive{
             border: 1px solid rgb(255, 154, 154);
             background-color: white;
             margin:5px;
@@ -34,13 +34,13 @@
         
         .page-header .container {
             height:100px;
-        }
+        } */
 
         .page-header::before {
            background: none;
         }
 
-    </style> -->
+    </style>
 </head>
 
 <body>    
@@ -141,9 +141,18 @@
     <!-- ==========Header Section Ends Here========== -->
     
     <!-- ==========Page Header Section Starts Here========== -->
-    <section class="page-header bg_img mt-3" data-background="assets/images/blog/blog-banner.png">
+    <section class="page-header bg_img" data-background="assets/images/banner/banner-img.png">
         <div class="container" style="height: 200px;">
             <div class="page-header-content">
+                <h2 class="title">Blog</h2>
+                <ul class="breadcrumb">
+                    <li>
+                        <a href="index.html">home</a>
+                    </li>
+                    <li>
+                        Blog
+                    </li>
+                </ul>
             </div>
         </div>
     </section>
